# forward-roll

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/fr-plan-milestone/: SKILL.md
.agents/skills/jj/: SKILL.md
.agents/skills/jj/agents/: openai.yaml
.agents/skills/jj/references/: edit-workflow.md  git-translation.md  recovery.md  revsets.md  sources.md  squash-workflow.md
.agents/skills/lat/: SKILL.md
.agents/skills/lat/agents/: openai.yaml
.codex/agents/: fr-milestone-plan-checker.md  fr-milestone-planner.md  fr-milestone-planning-orchestrator.md
.forward-roll/: runtime.json
.forward-roll/specs/: README.md  architecture.md  context.md  testing.md  workflow.md
.planning/: PHASE-04.md  PHASE-05.md  PHASE-06.md  PHASE-07.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
lat.md/: architecture.md  domain.md  lat.md  workflow.md
plugins/forward-roll/: README.md
plugins/forward-roll/.codex-plugin/: plugin.json
plugins/forward-roll/skills/fr-do/: SKILL.md
scripts/: validate_python_constraints.py  verify_plugin_rebuild.py
specs/: README.md  architecture.md  context.md  testing.md  workflow.md
src/: README.md  build.py  plugin-build.json
src/forward_roll/: __init__.py  cli.py
src/forward_roll/adapters/: __init__.py  bootstrap_config.py
src/forward_roll/application/: bootstrap.py  phase_launch.py  prompts.py
src/forward_roll/domain/: model.py
src/forward_roll/host_assets/: __init__.py
src/plugin-shell/: README.md
src/skill-templates/fr-bootstrap/: SKILL.md
src/skill-templates/fr-do/: SKILL.md
src/skill-templates/fr-feedback/: SKILL.md
src/skill-templates/fr-plan-epic/: SKILL.md
src/skill-templates/fr-plan-slice/: SKILL.md
src/skill-templates/fr-specify/: SKILL.md
tests/: test_bootstrap_config.py  test_lat_knowledge_graph.py  test_milestone_planning_skill.py  test_phase_launch.py
(+36 files in other folders)
