[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "forward-roll"
version = "0.1.0"
description = "Codex-first agentic workflow tooling with jj-native workflows and strict Python types."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Scott Trinh" },
]
dependencies = [
  "attrs>=25.3.0,<26.0.0",
  "cattrs>=24.1.0,<25.0.0",
  "typer>=0.16.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "hypothesis>=6.131.0,<7.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.1.0,<7.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[project.scripts]
forward-roll = "forward_roll.cli:app"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = ["src"]
packages = ["forward_roll"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "FA",
  "I",
  "N",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
