[project]
name = "forward-roll-script-tooling"
version = "0.0.0"
description = "Script-only tooling for Forward Roll skill bundles."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["plugins/forward-roll/skills"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
files = ["plugins/forward-roll/skills"]
strict = true
warn_unused_configs = true
namespace_packages = false
explicit_package_bases = false
exclude = [
  "^\\.git/",
  "^\\.jj/",
]
